# X

./: .gitignore  README.md  README_FINAL.md  docker-compose.yml
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/config/: settings.toml
app/src/: main.cpp
app/src/api/: LocalHttp.cpp  LocalHttp.h
app/src/core/: AiReasoner.cpp  AiReasoner.h  ContextMemory.cpp  ContextMemory.h  ExecSandbox.cpp  ExecSandbox.h  LlamaRunner.cpp  LlamaRunner.h
app/src/security/: SecureStore.cpp  SecureStore.h
app/src/ui/: MainWindow.cpp  MainWindow.h
app/src/util/: Strings.h
docs/: BUILD_WINDOWS.md  DEPLOY_UBUNTU.md  LARGE_FILE_UPLOAD.md
ops/actions-api/: .env.example  Dockerfile  openapi.json  package.json  server.cjs  server.js
ops/nginx/: actions-api.conf
ops/systemd/: actions-api.service
